# chat_application

./: AuthPage.qml  CMakeLists.txt  ChatPage.qml  Main.qml  apiservice.cpp  apiservice.h  authpage.cpp  authpage.h  main.cpp
