cmake_minimum_required(VERSION 3.16)

project(chat_app VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 6.2 REQUIRED COMPONENTS Quick)


qt_add_executable(appchat_app
    main.cpp
)

qt_add_qml_module(appchat_app
    URI chat_app
    VERSION 1.0
    QML_FILES Main.qml
    SOURCES apiservice.h apiservice.cpp
    RESOURCES
    QML_FILES AuthPage.qml
    QML_FILES ChatPage.qml
    SOURCES authpage.h authpage.cpp
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(appchat_app PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appchat_app
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(appchat_app
    PRIVATE Qt6::Quick
)

include(GNUInstallDirs)
install(TARGETS appchat_app
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
